bottom_nav_menu.xml added.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="yellow">#FFDE03</color>
+    <color name="blue">#0336FF</color>
+    <color name="blue_varient">#0025B6</color>
+
+
 </resources>
