--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -17,4 +17,8 @@
         android:layout_height="wrap_content"
         android:text="this is shivam"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 </FrameLayout>
